...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/linearlayout_dialog_context_options_padding"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_dialog_context_options_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:text="@string/label_dialog_context_options_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listview_dialog_context_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/listview_dialog_context_options_margin_top"
            android:layout_marginBottom="@dimen/listview_dialog_context_options_margin_bottom"
            android:layout_marginStart="@dimen/listview_dialog_context_options_margin_left"
            android:layout_marginEnd="@dimen/listview_dialog_context_options_margin_right"
...
